# Portfolio

./: .gitmodules  README.md
C++GUI/Jack-In-The-Box/MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  Component.h  Crank.cpp  Crank.h  IKeyResponder.cpp  IKeyResponder.h  IRotationSink.cpp  IRotationSink.h  Machine.cpp  Machine.h  Machine2Factory.cpp  Machine2Factory.h  MachineCFactory.cpp  MachineCFactory.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MusicBox.cpp  MusicBox.h  Pulley.cpp  Pulley.h  RotationSource.cpp  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h
C++GUI/Jack-In-The-Box/MachineLib/resources/__MACOSX/audio/: ._README.txt
Graphics/3D OpenGL Engine/: README.md  link.md
Graphics/3D Vulkan Engine/: README.md  link.md
Graphics/Ray Tracing/: README.md
Graphics/Ray tracing/: AntiAliasing.shader  RayTracingCompute.compute  RayTracingMaster.cs
Graphics/Voxel Octree/: OctreeChunk.cs
Graphics/Voxels/: NodeShader.shader
Networking/: README.md  Server.go  Unity.cs  Website.js
Rendering/Voxels/: OctCompute.compute  OctreeChunk.cs
UnityGame/: DispatchSystem.cs  Mission.cs  MissionCollection.cs  README.md  Reward.cs  TurnBasedSystem.cs
